# miniAMR

./: .gitignore  Makefile
ref/: CMakeLists.txt  main.c  monitor.c  monitor.h  mytimer.c  mytimer.h  proto.h  stencil.c
